cmake_minimum_required(VERSION 3.27)
project(Programming_Languages)

set(CMAKE_CXX_STANDARD 14)

add_executable(Programming_Languages
        "Programming Lanuages Project/README.md"
        "Programming Lanuages Project/scanner.cpp"
        ProgrammingProject.pdf
        README.md
        RPAL_Grammar.pdf
        RPAL_Lex.pdf)
