cmake_minimum_required(VERSION 3.27)
project(Programming_Languages)

set(CMAKE_CXX_STANDARD 14)

add_executable(Programming_Languages
        "Programming Lanuages Project/README.md"
        "Programming Lanuages Project/scanner.cpp"
        "Programming Lanuages Project/ProgrammingProject.pdf"
        "Programming Lanuages Project/README.md"
        "Programming Lanuages Project/RPAL_Grammar.pdf"
        "Programming Lanuages Project/RPAL_Lex.pdf")
